Bug 151648 - Modern IDB: After versionchange transactions abort, fire onerror on the original IDBOpenDBRequest
Summary: Modern IDB: After versionchange transactions abort, fire onerror on the origi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882
  Show dependency treegraph
 
Reported: 2015-11-29 14:05 PST by Brady Eidson
Modified: 2015-11-30 12:12 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (19.92 KB, patch)
2015-11-29 18:04 PST, Brady Eidson
aestes: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from ews112 for mac-yosemite (1.41 MB, application/zip)
2015-11-29 19:09 PST, Build Bot
no flags Details
Patch v1 (re-submitted) (20.03 KB, patch)
2015-11-30 11:14 PST, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2015-11-29 14:05:54 PST
Modern IDB: After versionchange transactions abort, fire onerror on the original IDBOpenDBRequest

This was found while trying to unskip existing skipped tests (and therefore already has a test!)
Comment 1 Brady Eidson 2015-11-29 18:04:18 PST
Created attachment 266230 [details]
Patch v1
Comment 2 Build Bot 2015-11-29 19:09:57 PST
Comment on attachment 266230 [details]
Patch v1

Attachment 266230 [details] did not pass mac-debug-ews (mac):
Output: http://webkit-queues.webkit.org/results/494940

New failing tests:
storage/indexeddb/modern/index-1.html
storage/indexeddb/modern/versionchange-abort-then-reopen.html
storage/indexeddb/modern/index-5.html
storage/indexeddb/modern/createobjectstore-basic.html
storage/indexeddb/modern/deleteindex-2.html
storage/indexeddb/modern/double-abort.html
storage/indexeddb/aborted-versionchange-closes.html
storage/indexeddb/modern/deleteobjectstore-1.html
storage/indexeddb/modern/abort-requests-cancelled.html
storage/indexeddb/mozilla/versionchange-abort.html
Comment 3 Build Bot 2015-11-29 19:09:59 PST
Created attachment 266234 [details]
Archive of layout-test-results from ews112 for mac-yosemite

The attached test failures were seen while running run-webkit-tests on the mac-debug-ews.
Bot: ews112  Port: mac-yosemite  Platform: Mac OS X 10.10.5
Comment 4 Brady Eidson 2015-11-29 21:22:52 PST
(In reply to comment #2)
> Comment on attachment 266230 [details]
> Patch v1
> 
> Attachment 266230 [details] did not pass mac-debug-ews (mac):
> Output: http://webkit-queues.webkit.org/results/494940
> 
> New failing tests:
> storage/indexeddb/modern/index-1.html
> storage/indexeddb/modern/versionchange-abort-then-reopen.html
> storage/indexeddb/modern/index-5.html
> storage/indexeddb/modern/createobjectstore-basic.html
> storage/indexeddb/modern/deleteindex-2.html
> storage/indexeddb/modern/double-abort.html
> storage/indexeddb/aborted-versionchange-closes.html
> storage/indexeddb/modern/deleteobjectstore-1.html
> storage/indexeddb/modern/abort-requests-cancelled.html
> storage/indexeddb/mozilla/versionchange-abort.html

Bizarre. Definitely a "didn't see that locally" kind of thing.

These are crashed DRTs - ASSERTs. Will take a look tomorrow.
Comment 5 Brady Eidson 2015-11-29 22:33:11 PST
(In reply to comment #4)
> (In reply to comment #2)
> > Comment on attachment 266230 [details]
> > Patch v1
> > 
> > Attachment 266230 [details] did not pass mac-debug-ews (mac):
> > Output: http://webkit-queues.webkit.org/results/494940
> > 
> > New failing tests:
> > storage/indexeddb/modern/index-1.html
> > storage/indexeddb/modern/versionchange-abort-then-reopen.html
> > storage/indexeddb/modern/index-5.html
> > storage/indexeddb/modern/createobjectstore-basic.html
> > storage/indexeddb/modern/deleteindex-2.html
> > storage/indexeddb/modern/double-abort.html
> > storage/indexeddb/aborted-versionchange-closes.html
> > storage/indexeddb/modern/deleteobjectstore-1.html
> > storage/indexeddb/modern/abort-requests-cancelled.html
> > storage/indexeddb/mozilla/versionchange-abort.html
> 
> Bizarre. Definitely a "didn't see that locally" kind of thing.
> 
> These are crashed DRTs - ASSERTs. Will take a look tomorrow.

Just realized - I have 4 or 5 other patches out for review in IDB code that haven't landed, but they *are* committed all locally. They almost certainly are the cause of this.

Will re-run this same patch by EWS after those others have landed.
Comment 6 Brady Eidson 2015-11-30 11:14:48 PST
Created attachment 266253 [details]
Patch v1 (re-submitted)
Comment 7 WebKit Commit Bot 2015-11-30 12:12:20 PST
Comment on attachment 266253 [details]
Patch v1 (re-submitted)

Clearing flags on attachment: 266253

Committed r192813: <http://trac.webkit.org/changeset/192813>
Comment 8 WebKit Commit Bot 2015-11-30 12:12:23 PST
All reviewed patches have been landed.  Closing bug.