Source/WebCore/Modules/indexeddb/client/IDBDatabaseImpl.cpp
@@ -138,12 +138,12 @@ RefPtr<WebCore::IDBTransaction> IDBDatabase::transaction(ScriptExecutionContext*
     LOG(IndexedDB, "IDBDatabase::transaction");
 
     if (m_closePending) {
-        ec = INVALID_STATE_ERR;
+        ec = IDBDatabaseException::InvalidStateError;
         return nullptr;
     }
 
     if (objectStores.isEmpty()) {
-        ec = INVALID_ACCESS_ERR;
+        ec = IDBDatabaseException::InvalidAccessError;
         return nullptr;
     }
 
@@ -157,14 +157,14 @@ RefPtr<WebCore::IDBTransaction> IDBDatabase::transaction(ScriptExecutionContext*
     }
 
     if (m_versionChangeTransaction && !m_versionChangeTransaction->isFinishedOrFinishing()) {
-        ec = INVALID_STATE_ERR;
+        ec = IDBDatabaseException::InvalidStateError;
         return nullptr;
     }
 
     for (auto& objectStoreName : objectStores) {
         if (m_info.hasObjectStore(objectStoreName))
             continue;
-        ec = NOT_FOUND_ERR;
+        ec = IDBDatabaseException::NotFoundError;
         return nullptr;
     }
 
@@ -294,6 +294,9 @@ void IDBDatabase::willAbortTransaction(IDBTransaction& transaction)
     auto refTransaction = m_activeTransactions.take(transaction.info().identifier());
     ASSERT(refTransaction);
     m_abortingTransactions.set(transaction.info().identifier(), WTF::move(refTransaction));
+
+    if (transaction.isVersionChange())
+        m_closePending = true;
 }
 
 void IDBDatabase::didAbortTransaction(IDBTransaction& transaction)
@@ -303,6 +306,9 @@ void IDBDatabase::didAbortTransaction(IDBTransaction& transaction)
     if (transaction.isVersionChange()) {
         ASSERT(transaction.originalDatabaseInfo());
         m_info = *transaction.originalDatabaseInfo();
+        m_closePending = true;
+        m_closedInServer = true;
+        m_serverConnection->databaseConnectionClosed(*this);
     }
 
     didCommitOrAbortTransaction(transaction);
